
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


typedef int pkg ;
struct TYPE_4__ {int ui32Size; unsigned int ui32InBufferSize; unsigned int ui32OutBufferSize; void* pvParamOut; void* pvParamIn; int ui32BridgeID; } ;
typedef TYPE_1__ PVRSRV_BRIDGE_PACKAGE ;


 int CONNECT_SERVICES ;
 int ioctl (int,int ,TYPE_1__*) ;
 int memset (TYPE_1__*,int ,int) ;

int
do_ioctl(int fd, void *in, unsigned int in_size, void *out, unsigned int out_size)
{
 PVRSRV_BRIDGE_PACKAGE pkg;

 memset(&pkg, 0, sizeof(pkg));

 pkg.ui32BridgeID = CONNECT_SERVICES;
 pkg.ui32Size = sizeof(pkg);
 pkg.ui32InBufferSize = in_size;
 pkg.pvParamIn = in;
 pkg.ui32OutBufferSize = out_size;
 pkg.pvParamOut = out;

 return ioctl(fd, 0, &pkg);
}
